style.css
/* I really hate modifying existing components, but this is just *such* a better UX... */
:root {
    --sm-side-panel-width: 0;
    --sm-side-panel-slide-speed: .15s;
    --sm-entry-size: 74.5px;
    --sm-entry-type-badge-height: 18px;

    --sm-value-diff-same: green;
    --sm-value-diff-changed: red;
    --sm-value-diff-missing: rgb(251, 146, 60);
}

.contain {
    display: flex;
    flex-direction: row;
}

#quicksettings {
    width: calc(100vw - 20px);
}

/* SM components */
.sd-webui-sm-quicksettings-button {
    position: relative;
}

#sd-webui-sm-quicksettings-button-save .icon {
    position: absolute;
    bottom: 2px;
    right: 2px;
    font-size: 0.9rem;
    filter: drop-shadow(-1px -1px var(--button-color-primary));
}

#sd-webui-sm-quicksettings-button-save .sd-webui-sm-save-menu {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 200;
}

#sd-webui-sm-quicksettings-button-save .sd-webui-sm-save-menu button {
    border-radius: var(--button-large-radius);
    white-space: nowrap;
    padding: 3px 7px;
    font-size: 0.8em;
    display: block;
    width: 100%;
    max-width: unset;
    margin: 3px 0;
}

#sd-webui-sm-quicksettings-button-save .sd-webui-sm-save-menu button.disabled {
    color: color-mix(in srgb, var(--button-secondary-text-color), #0000);
}

.sd-webui-sm-shake {
    animation: sd-webui-sm-shake .15s;
    animation-iteration-count: 6;
}

.sd-webui-sm-quicksetting {
    display: inline-flex;
    align-items: center;
    margin-right: 7px;
    user-select: none;
}

.sd-webui-sm-quicksetting input {
    appearance: auto;
    margin-right: 4px;
}

.sd-webui-sm-quicksetting label {
    vertical-align: text-top;
}

@keyframes sd-webui-sm-shake {
    0% { translate: 0px 0px; }
    25% { translate: 4px 0px; }
    50% { translate: 0px 0px; }
    75% { translate: -4px 0px; }
    100% { translate: 0px 0px; }
}

.sd-webui-sm-side-panel {
    width: var(--sm-side-panel-width);
    flex-shrink: 0;

    display: grid;
    grid-template-rows: 2.2em auto minmax(0, 1fr);
    grid-template-columns: minmax(320px, 100%);
    height: min(78vh, 900px);
    min-height: 560px;
    padding-top: 10px;
    margin-left: 0;
    justify-content: right; /* Nicer slide-in animation */
    overflow: hidden;
    transition: width var(--sm-side-panel-slide-speed), visibility var(--sm-side-panel-slide-speed);
    visibility: hidden;
}

.sd-webui-sm-side-panel.sd-webui-sm-side-panel-legacy {
    display: block;
    min-height: unset;
    height: auto;
    padding-top: 0;
}

.sd-webui-sm-side-panel.sd-webui-sm-side-panel-folded {
    grid-template-rows: 2.2em 0 0;
    height: 2.2em;
    min-height: 2.2em;
}

.sd-webui-sm-side-panel.sd-webui-sm-side-panel-folded .sd-webui-sm-entry-container,
.sd-webui-sm-side-panel.sd-webui-sm-side-panel-folded .sd-webui-sm-inspector {
    display: none;
}

.sd-webui-sm-panel-container {
    display: contents;
    background-color: #000618b5;
}

/* .sd-webui-sm-panel-container {
    display: contents;
} */

.sd-webui-sm-modal-panel.open {
    position: absolute;
    top: 0;
    left: 0;
    padding: 2vw;
}

.sd-webui-sm-modal-panel .sd-webui-sm-side-panel {
    --modal-padding: 20px;
    --position-offset: 5vw;

    position: absolute;
    top: 2.5vh;
    left: var(--position-offset);
    height: 95vh;
    min-height: unset;
    grid-template-rows: 2em calc(100% - 2em);
    grid-template-columns: 75% auto;
    padding: var(--modal-padding);
    background-color: #FFF;
    border: 1px solid var(--border-color-primary);
    border-radius: 4px;
    justify-content: unset;
    /* box-shadow: 5px 5px 1vw 8px #0003; */
    /* box-shadow: 0 0 0 calc(var(--position-offset) * 1.1) #000618b5; */
    /* z-index: 999; */
    /* transform-style: preserve-3d; */
    z-index: 2147483001;
}

.sd-webui-sm-panel-container.sd-webui-sm-modal-panel .sd-webui-sm-side-panel {
    transition: none;
}

.sd-webui-sm-panel-container.open .sd-webui-sm-side-panel {
    width: auto;
    min-width: min(320px, 100%);
    flex-grow: 1;
    display: grid;
    visibility: visible;
    background: var(--body-background-fill);
}

.sd-webui-sm-panel-container.sd-webui-sm-modal-panel.open .sd-webui-sm-side-panel {
    width: calc(100vw - calc(var(--position-offset) * 2));
    min-width: unset;
    flex-grow: 0;
}

.sd-webui-sm-modal-panel .sd-webui-sm-side-panel.sd-webui-sm-small-view-collapsed {
    grid-template-columns: 1fr;
}

.sd-webui-sm-modal-panel .sd-webui-sm-side-panel.sd-webui-sm-small-view-collapsed .sd-webui-sm-inspector {
    grid-column: 1;
    padding-left: 0;
}

.sd-webui-sm-modal-panel .sd-webui-sm-inspector-mode,
.sd-webui-sm-modal-panel .sd-webui-sm-nav-apply-config-button,
.sd-webui-sm-modal-panel .sd-webui-sm-nav-save-button,
.sd-webui-sm-modal-panel .sd-webui-sm-quicksetting {
    display: none;
}

.sd-webui-sm-modal-close-button {
    display: none;
}

.sd-webui-sm-modal-panel .sd-webui-sm-modal-close-button {
    display: inline-block;
}

.sd-webui-sm-panel-container.sd-webui-sm-modal-panel.open {
    position: fixed;
    top: 0;
    left: 0;
    display: block;
    width: 100vw;
    height: 100vh;
    z-index: 2147483000;
    isolation: isolate;
}

body.sd-webui-sm-modal-open {
    overflow: hidden !important;
}

/* .sd-webui-sm-modal-panel::before {
    content: '';
    position: absolute;
    top: -2.5vh;
    left: -2.5vw;
    width: 100vw;
    height: 100vh;
    background-color: #000A;
    transform: translateZ(-1px);
} */

.sd-webui-sm-navigation {
    /* background-color: black; */
    height: 2em;
    grid-column: 1 / -1;
    grid-row: 1;
}

.sd-webui-sm-modal-panel .sd-webui-sm-navigation {
    grid-column: 1/-1;
    height: 2em;
}

.sd-webui-sm-control {
    display: flex;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 3;
}
/* ... */

